samples/_failures_safe/1761610534_01c2d3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bb45d0bc.c: In function ‘main’:
./samples/SAFE/__tmp_bb45d0bc.c:169:9: error: expected expression at end of input
  169 |         if (!
      |         ^~
./samples/SAFE/__tmp_bb45d0bc.c:169:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bb45d0bc.c:169:9: error: expected declaration or statement at end of input
